--- a/2025_01/session03/session8.ipynb
+++ b/2025_01/session03/session8.ipynb
@@ -11,19 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## NEXT WEEK SESSION WILL BE AT\n",
-    "\n",
-    "45-65 Peckham Rd, London SE5 8UF\n",
-    "\n",
-    "\n",
-    "\n",
-    "[University of the Arts London, Camberwell College of Arts, 45-65 Peckham Rd, London SE5 8UF](https://maps.app.goo.gl/b9hhP49fTpfu5Y6Z9)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 1. Introduction to Pandas\n",
     "🐼🐼🐼🐼\n",
     "\n",
@@ -847,8 +834,8 @@
       "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
       "Successfully installed contourpy-1.2.1 cycler-0.12.1 fonttools-4.53.1 kiwisolver-1.4.5 matplotlib-3.9.2 pillow-10.4.0 pyparsing-3.1.2\n",
       "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.2\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m A new release of pip available: \u001B[0m\u001B[31;49m22.3\u001B[0m\u001B[39;49m -> \u001B[0m\u001B[32;49m24.2\u001B[0m\n",
+      "\u001B[1m[\u001B[0m\u001B[34;49mnotice\u001B[0m\u001B[1;39;49m]\u001B[0m\u001B[39;49m To update, run: \u001B[0m\u001B[32;49mpip install --upgrade pip\u001B[0m\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
